crates/lowering_v1/tests/snapshots/concrete__lower_constructor_value.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.lowering_map"
snapshot_kind: text
---
LoweringMap {
    expr_item: {
        Id<indexing_v1::indexes::ExprItem>(0): Constructor {
            arguments: [
                Id<syntax::cst::Type>(0),
            ],
        },
        Id<indexing_v1::indexes::ExprItem>(1): Constructor {
            arguments: [],
        },
    },
}
