crates/lowering_v1/tests/snapshots/concrete__lower_expression_infix_chain.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 26..28,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "a",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 30..33,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "for",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 34..36,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "b",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 38..41,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "for",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 42..44,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "c",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInfixChain,
                range: 26..44,
            },
        }: InfixChain {
            head: Some(
                Id<syntax::cst::Expression>(0),
            ),
            tail: [
                TickPair {
                    tick: Some(
                        Id<syntax::cst::Expression>(1),
                    ),
                    element: Some(
                        Id<syntax::cst::Expression>(2),
                    ),
                },
                TickPair {
                    tick: Some(
                        Id<syntax::cst::Expression>(3),
                    ),
                    element: Some(
                        Id<syntax::cst::Expression>(4),
                    ),
                },
            ],
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
